--- a/public/index.html
+++ b/public/index.html
@@ -3,30 +3,30 @@
 
 <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/png" href="https://manoj-paramsetti.github.io/img/favicon.png" />
+    <link rel="icon" type="image/png" href="https://github.com/kiruthika-t/My_portfolio/blob/main/public/woman.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#ee2333" />
-    <link rel="apple-touch-icon" href="https://manoj-paramsetti.github.io/img/favicon.png" />
+    <link rel="apple-touch-icon" href="https://github.com/kiruthika-t/My_portfolio/blob/main/public/woman.png" />
 
     <!-- Primary Meta Tags -->
-    <title>Manoj Paramsetti | Portfolio | CSE Student</title>
-    <meta name="title" content="Manoj Paramsetti | Portfolio | CSE Student">
-    <meta name="description" content="Manoj Paramsetti - Computer Science and Engineering student at Sathyabama University">
+    <title>Kaviya Gopi | Portfolio | CSE Student</title>
+    <meta name="title" content="Kaviya Gopi | Portfolio | CS Student">
+    <meta name="description" content="Kaviya Gopi - Computer Science student at Stony Brook University">
     <meta name="robots" content="index">
     <meta name="keywords" content="CSE, Student, App, Developer, Manoj, Paramsetti, Computer, Docker, Flutter, Kotlin, MERN, Sathyabama, Sathyabama University, DSC, Developer">
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://manojparamsetti.vercel.app/">
-    <meta property="og:title" content="Manoj Paramsetti | Portfolio | CSE Student">
-    <meta property="og:description" content="Manoj Paramsetti - Computer Science and Engineering student at Sathyabama University">
-    <meta property="og:image" content="https://imgur.com/vl13Ps0.png">
+    <meta property="og:title" content="Kaviya Gopi | Portfolio | CSE Student">
+    <meta property="og:description" content="Kaviya Gopi - Computer Science student at Stony Brook University">
+    <meta property="og:image" content="https://github.com/kiruthika-t/My_portfolio/blob/main/public/woman.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="">
     <meta property="twitter:url" content="https://manojparamsetti.vercel.app/">
-    <meta property="twitter:title" content="Manoj Paramsetti | Portfolio | CSE Student">
-    <meta property="twitter:description" content="Manoj Paramsetti - Computer Science and Engineering student at Sathyabama University">
-    <meta property="twitter:image" content="https://imgur.com/vl13Ps0.png">
+    <meta property="twitter:title" content="Kaviya Gopi | Portfolio | CSE Student">
+    <meta property="twitter:description" content="Kaviya Gopi - Computer Science student at Stony Brook University">
+    <meta property="twitter:image" content="https://github.com/kiruthika-t/My_portfolio/blob/main/public/woman.png">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
