--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/png" href="https://github.com/kiruthika-t/My_portfolio/blob/main/public/woman.png" />
+    <link rel="icon" type="image/png" href="https://github.com/kiruthika-t/My_portfolio/blob/9598a00d338e92dcde6fdd3bdda90aec464e1a35/public/Photo.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#ee2333" />
-    <link rel="apple-touch-icon" href="https://github.com/kiruthika-t/My_portfolio/blob/main/public/woman.png" />
+    <link rel="apple-touch-icon" href="https://github.com/kiruthika-t/My_portfolio/blob/9598a00d338e92dcde6fdd3bdda90aec464e1a35/public/Photo.jpeg" />
 
     <!-- Primary Meta Tags -->
     <title>Kaviya Gopi | Portfolio | CSE Student</title>
