--- a/public/index.html
+++ b/public/index.html
@@ -13,17 +13,17 @@
     <meta name="title" content="Kaviya Gopi | Portfolio | CS Student">
     <meta name="description" content="Kaviya Gopi - Computer Science student at Stony Brook University">
     <meta name="robots" content="index">
-    <meta name="keywords" content="CSE, Student, App, Developer, Manoj, Paramsetti, Computer, Docker, Flutter, Kotlin, MERN, Sathyabama, Sathyabama University, DSC, Developer">
+    
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://manojparamsetti.vercel.app/">
+    <meta property="og:url" content="https://portfolio-react-ten-orcin.vercel.app/">
     <meta property="og:title" content="Kaviya Gopi | Portfolio | CSE Student">
     <meta property="og:description" content="Kaviya Gopi - Computer Science student at Stony Brook University">
     <meta property="og:image" content="https://github.com/kiruthika-t/My_portfolio/blob/main/public/woman.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="">
-    <meta property="twitter:url" content="https://manojparamsetti.vercel.app/">
+    <meta property="twitter:url" content="https://portfolio-react-ten-orcin.vercel.app/">
     <meta property="twitter:title" content="Kaviya Gopi | Portfolio | CSE Student">
     <meta property="twitter:description" content="Kaviya Gopi - Computer Science student at Stony Brook University">
     <meta property="twitter:image" content="https://github.com/kiruthika-t/My_portfolio/blob/main/public/woman.png">
