--- a/public/index.html
+++ b/public/index.html
@@ -3,30 +3,30 @@
 
 <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/png" href="https://github.com/kiruthika-t/My_portfolio/blob/7775733028527f0a31073cb8fe0f99043e36b5af/public/logo192.png" />
+    <link rel="icon" type="image/png" href="src/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#ee2333" />
-    <link rel="apple-touch-icon" href="https://github.com/kiruthika-t/My_portfolio/blob/7775733028527f0a31073cb8fe0f99043e36b5af/public/logo192.png" />
+    <link rel="apple-touch-icon" href="src/logo.svg" />
 
     <!-- Primary Meta Tags -->
-    <title>Kaviya Gopi | Portfolio | CSE Student</title>
-    <meta name="title" content="Kaviya Gopi | Portfolio | CS Student">
+    <title>Kaviya Gopi | Portfolio | CS Student</title>
+    <meta name="title" content="Kaviya Gopi | Portfolio ">
     <meta name="description" content="Kaviya Gopi - Computer Science student at Stony Brook University">
     <meta name="robots" content="index">
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://portfolio-react-ten-orcin.vercel.app/">
-    <meta property="og:title" content="Kaviya Gopi | Portfolio | CSE Student">
+    <meta property="og:title" content="Kaviya Gopi | Portfolio ">
     <meta property="og:description" content="Kaviya Gopi - Computer Science student at Stony Brook University">
-    <meta property="og:image" content="https://github.com/kiruthika-t/My_portfolio/blob/main/public/woman.png">
+    <meta property="og:image" content="src/logo.svg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="">
     <meta property="twitter:url" content="https://portfolio-react-ten-orcin.vercel.app/">
-    <meta property="twitter:title" content="Kaviya Gopi | Portfolio | CSE Student">
+    <meta property="twitter:title" content="Kaviya Gopi | Portfolio">
     <meta property="twitter:description" content="Kaviya Gopi - Computer Science student at Stony Brook University">
-    <meta property="twitter:image" content="https://github.com/kiruthika-t/My_portfolio/blob/main/public/woman.png">
+    <meta property="twitter:image" content="src/logo.svg">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
